@@ -1,5 +1,17 @@
 2008-04-09  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/nm-connection-list.c
+		- (get_next_available_name): get the next available connection name
+			that's not taken
+		- (create_new_connection_for_type): create a new connection for a
+			specific device type
+		- (add_connection_cb): get a new connection for the device type that
+			this add button handles
+		- (new_connection_list, init_connection_lists): tag connection lists
+			with their device type
+
+2008-04-09  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-wireless.c
 		- (populate_ui): don't puke on blank SSID, like when adding a new
 			connection
